welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getMondehauteur
		if (getX()==getMondeLargeur()-1 && getY()==getMondehauteur()-1) {
                                                           ^